# http-dispatch-rs

./: Cargo.toml
src/: client.rs  convert.rs  error.rs  lib.rs  tests.rs
src/convert/: box_body.rs  bytes.rs  json.rs  method.rs  status_code.rs  tuple.rs  typed_header.rs  unit.rs  uri.rs
