[package]
name = "http-dispatch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
futures = "0.3"
headers = "0.3"
http = "0.2"
http-body = "0.4"
hyper = "0.14"
serde = "1"
serde_json = "1"
thiserror = "1"
tower = { version = "0.4", features= ["util"] }

[dev-dependencies]
hyper = { version = "0.14", features = ["client", "http2"] }
hyper-rustls = { version = "0.24", features = ["http2", "webpki-roots"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros"] }
